--- a/public/_assets/css/components/slider.css
+++ b/public/_assets/css/components/slider.css
@@ -1,21 +1,25 @@
-.slider{
+.slider {
     height: 600px;
     background-image: url("/_assets/images/slider-2.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    justify-content: center;    /*** X ***/
+    align-items: start;    /*** Y ***/
     box-shadow: 2px 2px 13px rgb(26, 26, 26);
     border-radius: 0 0 10px 10px;
     cursor: pointer;
+    background-color: var(--main-color);
+    background-position-x: 75%;
 }
-.slider-content{
-    background-color: rgb(0 0 0 /60%);
-    color: white;
+
+.slider-content {
+    background-color: rgb(255 255 255);
+    color: var(--main-color);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 2px 2px 13px rgb(26, 26, 26);
     text-align: center;
     margin-top: 5%;
+    opacity: 0.6;
 }
