--- a/public/_assets/css/main.css
+++ b/public/_assets/css/main.css
@@ -10,4 +10,8 @@
 @import url("/_assets/css/components/alert.css");
 @import url("/_assets/css/components/editor.css");
 @import url("/_assets/css/components/table.css");
+@import url("/_assets/css/components/aside.css");
+@import url("/_assets/css/components/dashboard.css");
+@import url("/_assets/css/components/error.css");
 @import url("/_assets/css/components/home.css");
+@import url("/_assets/css/components/burger.css");
