--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Register{% endblock %}
+{% set aside = "not" %}
 
 {% block body %}
     {{ form_start(registrationForm) }}
