--- a/public/_assets/css/components/aside.css
+++ b/public/_assets/css/components/aside.css
@@ -23,9 +23,9 @@ aside h2 {
 aside ul {
     padding: 5px;
 }
-aside a.active{
 
-}
+/* aside a.active {} */
+
 aside ol li a,
 aside ul li a {
     min-height: 50px;
@@ -38,8 +38,8 @@ aside ul li a {
 }
 
 aside ol li a:hover,
-aside ol li a.active ,
-aside ul li a.active ,
+aside ol li a.active,
+aside ul li a.active,
 aside ul li a:hover {
     background: var(--main-gradient);
     color: white;
@@ -49,5 +49,5 @@ aside ul li a:hover {
     aside {
         align-self: center;
     }
-    
+
 }
