--- a/public/_assets/css/components/index.css
+++ b/public/_assets/css/components/index.css
@@ -1,17 +1,24 @@
-body{
+body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #efefef;
 }
 
-h1,h2,h3,h4,h5,h6{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
-.title{
+
+.title {
     text-align: center;
     text-transform: uppercase;
 }
-.container{
+
+.container {
     width: 90%;
     max-width: 1500px;
     margin: 50px auto;
@@ -19,65 +26,84 @@ h1,h2,h3,h4,h5,h6{
     z-index: 999;
     overflow: hidden;
 }
-ul{
+
+ul {
     list-style-type: none;
     padding: 0;
 }
-.mt-20{
+
+.mt-20 {
     margin-top: 20px;
 }
-.flex{
+
+.flex {
     display: flex;
     gap: 5px;
 }
-.gap-20{
+
+.gap-20 {
     gap: 20px;
 }
-.flex-1{
-    flex:1;
+
+.flex-1 {
+    flex: 1;
 }
-.wrap{
+
+.wrap {
     flex-wrap: wrap;
 }
-.b{
+
+.b {
     /* border: 1px solid white; */
 }
-.aic{
+
+.aic {
     align-items: center;
 }
-.jcc{
+
+.jcc {
     justify-content: center;
 }
-a{
+
+a {
     color: inherit;
     text-decoration: none;
 }
-.badge{
+
+.badge {
     background-color: var(--main-color);
     color: white;
     border-radius: 40px;
     padding: 2px 5px;
 }
-.btn{
-    padding: 12px;
-    font-size: 1.2rem;
+
+.btn {
+    padding: 10px;
+    font-size: 0.8rem;
     color: white;
     cursor: pointer;
     border: none;
+    border-radius: 5px;
     text-align: center;
     text-transform: uppercase;
     box-shadow: 0 2px 25px #1d1d1d;
     background: var(--main-gradient);
 
 }
-form .btn{width: 100%;}
-.mb-10{
+
+form .btn {
+    width: 100%;
+}
+
+.mb-10 {
     margin-bottom: 10px;
 }
-none{
+
+none {
     display: none !important;
 }
-footer{
+
+footer {
     background: var(--main-gradient);
     color: white;
     /* height: 300px; */
@@ -87,34 +113,39 @@ footer{
     justify-content: center;
     box-shadow: 0 2px 25px #1d1d1d;
 }
-footer .footer-content{
-    gap: 10px;
+
+footer .footer-content {
+    gap: 50px;
 }
-footer .footer-content-item{
+
+footer .footer-content-item {
     min-width: 300px;
     padding: 5px;
 }
-footer h2{
+
+footer h2 {
     /* text-align: center; */
     text-transform: uppercase;
     font-size: 0.9;
     text-shadow: 1px 1px 25px #1d1d1d;
     border-bottom: 2px solid #efefef;
     padding-bottom: 5px;
-    display:inline-block;
+    display: inline-block;
 }
-footer ul{
+
+footer ul {
     padding: 0px;
     list-style-type: none;
 }
 
-footer ul li{
+footer ul li {
     line-height: 1.2;
     padding-bottom: 15px;
 }
+
 @media screen and (max-width: 900px) {
-    .container{
+    .container {
         flex-direction: column;
     }
-    
+
 }
