--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -1,28 +1,49 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Article{% endblock %}
+{% block title %}Edit Article
+{% endblock %}
+
+{% set aside = "not" %}
 
 {% block body %}
 
-    {{ include('article/_form.html.twig', {'button_label': 'Update', title: "Edit Article"}) }}
+	<div class="UserDashboard flex gap-20">
+		{{ include('account_dashboard/index.html.twig', {page: "articles"}) }}
+		<div class="UserDashboard-container">
+			{{ include('article/_form.html.twig', {'button_label': 'Mettre à jour', title: "Article"}) }}
+		</div>
+	</div>
 
-    <a href="{{ path('app_article_index') }}">back to list</a>
+	{# {{ include('article/_delete_form.html.twig') }} #}
 
-   {# {{ include('article/_delete_form.html.twig') }} #}
 {% endblock %}
-{% block javascripts %}
 
+{% block javascripts %}
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('.choices_categories').select2();
+
+            // remplacement fichier image dans le formulaire CRUD
+            $("input[type='file']").change(function () {
+                var file = $(this).get(0).files[0]
+                if (file) {
+                    var reader = new FileReader();
+                    reader.onload = function () {
+                        console.log(file);
+                        var img = `<img src='${reader.result
+                            }' alt="Preview Image" />`;
+                        $(".image-preview").html(img)
+                        console.log(img);
+                        console.log('salut');
+                    }
+                    reader.readAsDataURL(file)
+                }
+            })
         });
-        ClassicEditor
-                                .create( document.querySelector( '#article_content' ) )
-                                .then( editor => {
-                                        console.log( editor );
-                                } )
-                                .catch( error => {
-                                        console.error( error );
-                                } );
+        ClassicEditor.create(document.querySelector('#article_content')).then(editor => {
+            console.log(editor);
+        }).catch(error => {
+            console.error(error);
+        });
     </script>
 {% endblock %}
