--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -1,45 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Article index{% endblock %}
+{% block title %}Blog{% endblock %}
+{% set aside = "not" %}
 
+{% block header %}
+	{{ include('header/header.html.twig', {name :  "Dashboard" })}}
+{% endblock %}
 {% block body %}
-    <h1>Article index</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Slug</th>
-                <th>Content</th>
-                <th>ImageUrl</th>
-                <th>CreatedAt</th>
-                <th>UpdatedAt</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for article in articles %}
-            <tr>
-                <td>{{ article.id }}</td>
-                <td>{{ article.title }}</td>
-                <td>{{ article.slug }}</td>
-                <td>{{ article.content }}</td>
-                <td>{{ article.imageUrl }}</td>
-                <td>{{ article.createdAt ? article.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ article.updatedAt ? article.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('app_article_show', {'id': article.id}) }}">show</a>
-                    <a href="{{ path('app_article_edit', {'id': article.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+	<div class="UserDashboard flex gap-20">
+		{{ include('account_dashboard/index.html.twig', {page: "index"}) }}
+		<div class="UserDashboard-container">
+			<h2>Bienvenue sur votre tableau de bord</h2>
+			<p>Vous pouvez gérer votre compte depuis cette page</p>
+		</div>
+	</div>
 
-    <a href="{{ path('app_article_new') }}">Create new</a>
 {% endblock %}
