--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,107 +1,132 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		<link
+		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX
-        pour info voir ==> https://learn-sylius.com/en/posts/1-creer-son-theme-avec-webpack-et-encore #}
+		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX
+														        pour info voir ==> https://learn-sylius.com/en/posts/1-creer-son-theme-avec-webpack-et-encore #}
 
-        {% block stylesheets %}
-        {{ encore_entry_link_tags('app') }}
-        <link rel="stylesheet" href="/_assets/css/main.css">
-        {% endblock %}
-    </head>
+		{% block stylesheets %}
+			{{ encore_entry_link_tags('app') }}
+			<link rel="stylesheet" href="/_assets/css/main.css">
+		{% endblock %}
+	</head>
 
-    <body>
-        <header>
-            <a href="/index.php">
-                <h2>Blog</h2>
-            </a>
-            <nav>
-                <ul class="nav-bar flex aic">
-                    <li class="nav-item"><a href="#">About</a></li>
-                    <li class="nav-item down"><a href="#">Categories</a>
-                        <ul class="nav-bar">
-                            {% for category in app.session.get("categories") %}
-                            <li class="nav-item">
-                                <a href="/category/{{category.slug}}">{{ category.name}}
-                                    ({{category.articles| length}} articles)</a>
-                            </li>
-                            {% endfor %}
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a href="/contact">Contact</a></li>
+	<body>
+		<header>
+			<a href="/index.php">
+				<h2>Blog</h2>
+			</a>
+			<nav>
+				<ul class="nav-bar flex aic">
+					<li class="nav-item">
+						<a href="#">A propos</a>
+					</li>
+					<li class="nav-item down">
+						<a href="#">Catégories</a>
+						<ul class="nav-bar">
+							{% for category in app.session.get("categories") %}
+								<li class="nav-item">
+									<a href="/category/{{category.slug}}">{{ category.name}}
+										({{category.articles| length}}
+										articles)</a>
+								</li>
+							{% endfor %}
+						</ul>
+					</li>
+					<li class="nav-item">
+						<a href="/contact">Contact</a>
+					</li>
 
-                    {# inscription, authentification, déconnexion #}
-                    {% if app.user %}
-                    <li class="nav-item"><a href="/account">Your Articles</a></li>
-                    <li class="nav-item"><a href="/logout">Logout</a></li>
-                    {% else %}
-                    <li class="nav-item"><a href="/login">Login</a></li>
-                    <li class="nav-item"><a href="/register">Register</a></li>
-                    {% endif %}
-                </ul>
-            </nav>
-            <div class="nav-icon">
-                {# <i class="bi bi-card-heading"></i> #}
-                 <button onclick="this.classList.toggle('opened')">
-                    <svg width="40" height="40" viewBox="0 0 100 100">
-                        <path id="part1" class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
-                        <path id="part2" class="line line2" d="M 20,50 H 80" />
-                        <path id="part3" class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942" />
-                    </svg>
-                </button>
-            </div>
-        </header>
-        <main>
-            {% block slider %}{% endblock %}
-            <div class="container">
-                {% block body %}{% endblock %}
-            </div>
-        </main>
+					{# inscription, authentification, déconnexion #}
+					{% if app.user %}
+						<li class="nav-item">
+							<a href="/account">Mon compte</a>
+						</li>
+						<li class="nav-item">
+							<a href="/logout">Déconnexion</a>
+						</li>
+					{% else %}
+						<li class="nav-item">
+							<a href="/login">Connexion</a>
+						</li>
+						<li class="nav-item">
+							<a href="/register">Inscription</a>
+						</li>
+					{% endif %}
+				</ul>
+			</nav>
+			<div
+				class="nav-icon">
+				{# <i class="bi bi-card-heading"></i> #}
+				<button onclick="this.classList.toggle('opened')">
+					<svg width="40" height="40" viewbox="0 0 100 100">
+						<path id="part1" class="line line1" d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058"/>
+						<path id="part2" class="line line2" d="M 20,50 H 80"/>
+						<path id="part3" class="line line3" d="M 20,70.999954 H 80.000231 C 80.000231,70.999954 94.498839,71.182648 94.532987,33.288669 94.543142,22.019327 90.966081,18.329754 85.259173,18.331003 79.552261,18.332249 75.000211,25.000058 75.000211,25.000058 L 25.000021,74.999942"/>
+					</svg>
+				</button>
+			</div>
+		</header>
+		<main>
+			{% block slider %}{% endblock %}
+			<div class="container flex gap-10">
+				<div class="flex-1"> {% block body %}{% endblock %}
+					</div>
+					{% if aside is not defined %}
+						{% include 'aside/index.html.twig' %}
+					{% endif %}
+				</div>
+			</main>
 
-        <footer>
-            {% block footer %}
-            <div class="container">
-                <div class="footer-content flex wrap">
-                    <div class="footer-content-item flex-1 b">
-                        <h2>Blog</h2>
-                        <p>Site d'informations et d'actualités sur l'informatique, l'economie, la situation dans le
-                            monde, etc...</p>
-                    </div>
-                    <div class="footer-content-item flex-1 b">
-                        <h2>Mentions légales</h2>
-                        <ul>
-                            <li><a href="">Condition d'utilisation</a></li>
-                            <li><a href="">Condition de ventes</a></li>
-                            <li><a href="">Condition de publication</a></li>
-                        </ul>
-                    </div>
-                    <div class="footer-content-item flex-1 b">
-                        <h2>Formations gratuites</h2>
-                        <ul>
-                            <li><a href="https://free.mudey.fr/programme/apprendre-les-bases-indispensables-du-langage-html-5" target="_blank">Les bases HTML 5</a></li>
-                            <li><a href="https://free.mudey.fr/programme/apprendre-les-bases-indispensables-du-langage-css-3" target="_blank">Les bases CSS 3</a></li>
-                            <li><a href="https://free.mudey.fr/programme/apprendre-les-bases-indispensables-du-langages-javascript" target="_blank">Les bases JavaScript</a></li>
-                            <li><a href="https://free.mudey.fr/programme/les-bases-indispensables-du-langage-php" target="_blank">Les bases PHP</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            {% endblock %}
-        </footer>
+			<footer>
+				{% block footer %}
+					<div class="container">
+						<div class="footer-content flex wrap">
+							<div class="footer-content-item flex-1 b">
+								<h2>Blog</h2>
+								<p>
+									Site d'informations et d'actualités sur l'informatique, l'economie, la situation dans le monde, etc...
+								</p>
+							</div>
+							<div class="footer-content-item flex-1 b">
+								<h2>Mentions légales</h2>
+								<ul>
+									<li><a href="">Condition d'utilisation</a></li>
+									<li><a href="">Condition de ventes</a></li>
+									<li><a href="">Condition de publication</a></li>
+								</ul>
+							</div>
+							<div class="footer-content-item flex-1 b">
+								<h2>Formations gratuites</h2>
+								<ul>
+									<li><a href="https://free.mudey.fr/programme/apprendre-les-bases-indispensables-du-langage-html-5" target="_blank">Les bases HTML 5</a></li>
+									<li><a href="https://free.mudey.fr/programme/apprendre-les-bases-indispensables-du-langage-css-3" target="_blank">Les bases CSS 3</a></li>
+									<li><a href="https://free.mudey.fr/programme/apprendre-les-bases-indispensables-du-langages-javascript" target="_blank">Les bases JavaScript</a></li>
+									<li><a href="https://free.mudey.fr/programme/les-bases-indispensables-du-langage-php" target="_blank">Les bases PHP</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				{% endblock %}
+			</footer>
 
-        <script src="/_assets/js/jquery-3.6.1.js"></script>
-        <script src="/_assets/js/select2.js"></script>
-        <script src="/_assets/js/editor.js"></script>
-        <script src="/_assets/js/main.js"></script>
-        {% block javascripts %}
-        {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+			<script src="/_assets/js/jquery-3.6.1.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/Readmore.js/2.0.2/readmore.min.js" integrity="sha512-llWtDR3k09pa9nOBfutQnrS2kIEG7M6Zm7RIjVVLNab1wRs8NUmA0OjAE38jKzKeCg+A3rdq8AVW41ZTsfhu5Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+			<script src="/_assets/js/select2.js"></script>
+			<script src="/_assets/js/editor.js"></script>
+			<script src="/_assets/js/main.js"></script>
+			{% block javascripts %}
+				{{ encore_entry_script_tags('app') }}
+			{% endblock %}
 
-    </body>
+		</body>
 
-</html>
+	</html>
