--- a/templates/article/_form.html.twig
+++ b/templates/article/_form.html.twig
@@ -7,29 +7,27 @@
 {{ form_row(form.title) }}
 
 {{ form_row(form.content) }}
-<div class="flex">
 
+<div class="flex">
+	<div class="image-preview">
+		{% if not article.imageUrl == ""  %}
+			<img src="{{article.imageUrl}}" alt="Image de l'article : {{article.title}}">
+		{% endif %}
+	</div>
 	<div class="">
 		{% if required is defined %}
-			{{ form_row(form.imageFile, {attr:{required: required}}) }}
+			{{ form_row(form.imageFile,{attr:{required: required}}) }}
 		{% else %}
 			{{ form_row(form.imageFile) }}
 		{% endif %}
 	</div>
-
-	<div class="image-preview">
-		{% if not article.imageUrl == "" %}
-			{# not => si l'url de l'image n'est pas une chaine de caractère vide (image non définie) #}
-			<img src="{{ article.imageUrl}}" alt="Image de l'article : {{ article.title}}">
-		{% endif %}
-	</div>
-
 </div>
 
 {{ form_row(form.categories) }}
 
 <div class="flex">
-	<button class="btn">{{ button_label|default('Sauvegarder') }}</button>
-	<a href="{{ path('app_article_index') }}" class="btn">Annuler</a>
+	<button class="btn">{{ button_label|default('Save') }}</button>
+	<a href="{{ path('app_article_index') }}" class="btn">Cancel</a>
 </div>
+
 {{ form_end(form) }}
