--- a/public/_assets/css/components/home.css
+++ b/public/_assets/css/components/home.css
@@ -5,7 +5,7 @@
     justify-content: center;
 }
 
-/* .articles .article-item h2 {} */
+.articles .article-item h2 {}
 
 .articles .article-item {
     border: 1px solid #ccc;
