--- a/public/_assets/css/components/table.css
+++ b/public/_assets/css/components/table.css
@@ -10,7 +10,7 @@ table {
 table td,
 table th {
     border: 1px solid #ccc;
-    padding: 15px;
+    padding: 5px;
 }
 
 table td.image {
@@ -18,14 +18,13 @@ table td.image {
 }
 
 table td {
-    min-width: 50px;
-    min-height: 100px;
+    /* min-width: 150px; */
+    height: 250px;
     overflow: hidden;
 }
 
 table td img {
-    width: 100%;
-    /* height: 100%; */
+    width: 100%;    
 }
 
 table td .article-content {
@@ -36,13 +35,13 @@ table td .article-content {
 }
 
 table td.td-content {
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 
 table td a.btn-read {
     display: inline-block;
     float: right;
-    margin: 10px 5px;
+    margin: 10px 0;
 }
 
 table td form {
