--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,19 +4,20 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Welcome!
+			{% block title %}Welcome !
 			{% endblock %}
 		</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link
 		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-
-		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX
-														        pour info voir ==> https://learn-sylius.com/en/posts/1-creer-son-theme-avec-webpack-et-encore #}
-
+		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"/>
 			<link rel="stylesheet" href="/_assets/css/main.css">
 		{% endblock %}
+
+
 	</head>
 
 	<body>
@@ -27,14 +28,14 @@
 			<nav>
 				<ul class="nav-bar flex aic">
 					<li class="nav-item">
-						<a href="#">A propos</a>
+						<a href="">About</a>
 					</li>
 					<li class="nav-item down">
-						<a href="#">Catégories</a>
+						<a href="#">Categories</a>
 						<ul class="nav-bar">
 							{% for category in app.session.get("categories") %}
 								<li class="nav-item">
-									<a href="/category/{{category.slug}}">{{ category.name}}
+									<a href="/category/{{category.slug}}">{{category.name}}
 										({{category.articles| length}}
 										articles)</a>
 								</li>
@@ -44,21 +45,20 @@
 					<li class="nav-item">
 						<a href="/contact">Contact</a>
 					</li>
-
 					{# inscription, authentification, déconnexion #}
 					{% if app.user %}
 						<li class="nav-item">
-							<a href="/account">Mon compte</a>
+							<a href="/account">Account</a>
 						</li>
 						<li class="nav-item">
-							<a href="/logout">Déconnexion</a>
+							<a href="/logout">Logout</a>
 						</li>
 					{% else %}
 						<li class="nav-item">
-							<a href="/login">Connexion</a>
+							<a href="/login">Login</a>
 						</li>
 						<li class="nav-item">
-							<a href="/register">Inscription</a>
+							<a href="/register">Register</a>
 						</li>
 					{% endif %}
 				</ul>
@@ -75,47 +75,47 @@
 				</button>
 			</div>
 		</header>
-		<main>
-			{% block slider %}{% endblock %}
-			<div class="container flex gap-10">
-				<div class="flex-1"> {% block body %}{% endblock %}
-					</div>
-					{% if aside is not defined %}
-						{% include 'aside/index.html.twig' %}
-					{% endif %}
-				</div>
-			</main>
+		{% block slider %}{% endblock %}
+		{% block header %}{% endblock %}
+		<div class="container flex gap-20">
+			<div class="flex-1"> {% block body %}{% endblock %}
 
+				</div>
+				{% if aside is not defined %}
+					{% include 'aside/index.html.twig' %}
+				{% endif %}
+
+			</div>
 			<footer>
-				{% block footer %}
-					<div class="container">
-						<div class="footer-content flex wrap">
-							<div class="footer-content-item flex-1 b">
-								<h2>Blog</h2>
-								<p>
-									Site d'informations et d'actualités sur l'informatique, l'economie, la situation dans le monde, etc...
-								</p>
-							</div>
-							<div class="footer-content-item flex-1 b">
-								<h2>Mentions légales</h2>
-								<ul>
-									<li><a href="">Condition d'utilisation</a></li>
-									<li><a href="">Condition de ventes</a></li>
-									<li><a href="">Condition de publication</a></li>
-								</ul>
-							</div>
-							<div class="footer-content-item flex-1 b">
-								<h2>Formations gratuites</h2>
-								<ul>
-									<li><a href="https://free.mudey.fr/programme/apprendre-les-bases-indispensables-du-langage-html-5" target="_blank">Les bases HTML 5</a></li>
-									<li><a href="https://free.mudey.fr/programme/apprendre-les-bases-indispensables-du-langage-css-3" target="_blank">Les bases CSS 3</a></li>
-									<li><a href="https://free.mudey.fr/programme/apprendre-les-bases-indispensables-du-langages-javascript" target="_blank">Les bases JavaScript</a></li>
-									<li><a href="https://free.mudey.fr/programme/les-bases-indispensables-du-langage-php" target="_blank">Les bases PHP</a></li>
-								</ul>
-							</div>
+				<div class="container">
+					<div class="footer-content flex wrap">
+						<div class="footer-content-item flex-1 b">
+							<h2>Blog</h2>
+							<p>
+								Site d'informations et d'actualités sur l'informatique, l'economie, la situation dans le monde, etc...
+							</p>
+						</div>
+						<div class="footer-content-item flex-1 b">
+							<h2>Mentions légales</h2>
+							<ul>
+								<li><a href="">Condition d'utilisation</a></li>
+								<li><a href="">Condition de ventes</a></li>
+								<li><a href="">Condition de publication</a></li>
+							</ul>
+						</div>
+						<div class="footer-content-item flex-1 b">
+							<h2>Formations gratuites</h2>
+							<ul>
+								<li><a href="https://free.mudey.fr/programme/apprendre-les-bases-indispensables-du-langage-html-5" target="_blank">Les bases HTML 5</a></li>
+								<li><a href="https://free.mudey.fr/programme/apprendre-les-bases-indispensables-du-langage-css-3" target="_blank">Les bases CSS 3</a></li>
+								<li><a href="https://free.mudey.fr/programme/apprendre-les-bases-indispensables-du-langages-javascript" target="_blank">Les bases JavaScript</a></li>
+								<li><a href="https://free.mudey.fr/programme/les-bases-indispensables-du-langage-php" target="_blank">Les bases PHP</a></li>
+								<li><a href="https://mudey.fr/programme/formation-complete-developpeur-web-full-stack" target="_blank">Devenir Expert du Web</a></li>
+
+							</ul>
 						</div>
 					</div>
-				{% endblock %}
+				</div>
 			</footer>
 
 			<script src="/_assets/js/jquery-3.6.1.js"></script>
@@ -123,10 +123,10 @@
 			<script src="/_assets/js/select2.js"></script>
 			<script src="/_assets/js/editor.js"></script>
 			<script src="/_assets/js/main.js"></script>
+
 			{% block javascripts %}
 				{{ encore_entry_script_tags('app') }}
 			{% endblock %}
-
 		</body>
 
 	</html>
