--- a/templates/blog/articles_by_category.html.twig
+++ b/templates/blog/articles_by_category.html.twig
@@ -1,35 +1,40 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} {{ category.name }} {% endblock %}
+{% block title %} Articles de la categorie : {{ category.name }} {% endblock %}
+
+
+{% block header %}
+    {{ include('header/header.html.twig', {name :  category.name })}}
+{% endblock %}
 
 {% block body %}
-<div class="articles-infos">
-    <p> Articles de la categorie : <strong>{{ category.name }}</strong> </p>
-    <strong>{{articles | length}}</strong> articles retrouvés
-</div>
-<div class="articles">
-    {% for article in articles %}
-    <a href="/article/{{article.slug}}" class="article-item">
-        <div class="article-image">
-            <img src={{ article.imageUrl }} alt="Image de l'aricle : {{ article.title }}">
-        </div>
-        <div class="article-details flex">
-            <div class="article-author-details">
-                <div class="article-author-picture">
-                    {% if article.author.profile.picture is defined %}
-                    <img src="{{ article.author.profile.picture }}"
-                        alt="Image de profil de {{ article.author.fullname }}">
-                    {% else %}
-                    <img src="/_assets/images/avatar.webp" alt="Image de profil de {{ article.author.fullname }}">
-                    {% endif %}
+    <div class="articles-infos">
+        <p> Articles de la categorie : <strong>{{ category.name }}</strong> </p>
+        <strong>{{articles | length}}</strong> articles retrouvés
+    </div>
+    <div class="articles">
+        {% for article in articles %}
+            <a href="/article/{{article.slug}}" class="article-item">
+                <div class="article-image">
+                    <img src={{ article.imageUrl }}  alt="Image de l'aricle : {{ article.title }}">
                 </div>
-            </div>
-            <div class="article-content-details">
-                <h2 class="article-title"> {{ article.title }} </h2>
-                <div class="article-createdAt"> {{ article.fromNow }} </div>
-            </div>
-        </div>
-    </a>
-    {% endfor %}
-</div>
+                <div class="article-details flex">
+                    <div class="article-author-details">
+                        <div class="article-author-picture">
+                            {%if article.author.profile.picture is defined %}
+                                <img src={{ article.author.profile.picture }}  alt="image de profile de {{article.author.fullname}}">
+                            {%else%}
+                                <img src="/_assets/images/avatar.webp"  alt="image de profile de {{article.author.fullname}}">
+                            {%endif%}
+                        </div>
+                    </div>
+                    <div class="article-content-details">
+                        <h2 class="article-title"> {{ article.title }} </h2>
+                        <div class="article-createdAt"> {{ article.fromNow }} </div>
+                    </div>
+                </div>
+            </a>
+        {% endfor %}
+    </div>
+
 {% endblock %}
