--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -1,42 +1,50 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Blog{% endblock %}
+{% block title %}
+	Blog | Accueil
+{% endblock %}
 
 {% block slider %}
-    <div class="slider">
-        <div class="slider-content">
-            <h2>Bienvenue sur le blog</h2>
-            <p>Plusieurs articles publiés chaque jour !</p>
-        </div>
-    </div>
+	<div class="slider">
+		<div class="slider-content">
+			<h2>Bienvenue sur le Blog</h2>
+			<p>Plusieurs articles publiés chaque jour...</p>
+		</div>
+	</div>
 {% endblock %}
 
 {% block body %}
-    <div class="articles-infos">
-        <strong>{{articles | length}}</strong> articles retrouvés
-    </div>
-    <div class="articles">
-        {% for article in articles %}
-        <a href="/article/{{article.slug}}" class="article-item">
-            <div class="article-image">
-                <img src="{{ article.imageUrl }}" alt="Image de l'article : {{ article.title }}">
-            </div>
-            <div class="article-details flex">
-                <div class="article-author-details">
-                    <div class="article-author-picture">
-                        {% if article.author.profile.picture is defined %}
-                        <img src="{{ article.author.profile.picture }}" alt="Image de profil de {{ article.author.fullname }}">
-                        {% else %}
-                        <img src="/_assets/images/avatar.webp" alt="Image de profil de {{ article.author.fullname }}">
-                        {% endif %}
-                    </div>
-                </div>
-                <div class="article-content-details">
-                    <h2 class="article-title">{{ article.title }}</h2>
-                    <div class="article-createdAt">{{ article.fromNow }}</div>
-                </div>
-            </div>
-        </a>
-        {% endfor %}
-    </div>
+	<div class="articles-infos">
+		<strong>{{articles | length}}</strong>
+		articles retrouvés
+	</div>
+	<div class="articles">
+		{% for article in articles %}
+			<a href="/article/{{article.slug}}" class="article-item animate__fadeIn">
+				<div class="article-image">
+					<img src={{ article.imageUrl }} alt="Image de l'aricle : {{ article.title }}">
+				</div>
+				<div class="article-details flex">
+					<div class="article-author-details">
+						<div class="article-author-picture">
+							{% if article.author.profile.picture is defined %}
+								<img src={{ article.author.profile.picture }} alt="image de profile de {{article.author.fullname}}">
+							{% else %}
+								<img src="/_assets/images/avatar.webp" alt="image de profile de {{article.author.fullname}}">
+							{% endif %}
+						</div>
+					</div>
+					<div class="article-content-details">
+						<h2 class="article-title">
+							{{ article.title }}
+						</h2>
+						<div class="article-createdAt">
+							{{ article.fromNow }}
+						</div>
+					</div>
+				</div>
+			</a>
+		{% endfor %}
+	</div>
+
 {% endblock %}
